# app/Models/Entreprise.php
@@ -1,0 +1,13 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Entreprise extends Model
+{
+    use HasFactory;
+    protected $table = 'entreprises';
+    protected $guarded = [];
+}
